Use jdk11
Signed-off-by: zibo <ziboilihua@gmail.com>